@@ -5,11 +5,11 @@ INCLUDES= -I$(top_srcdir)/gwenhywfar2 \
  -I$(top_srcdir)/src/ipc \
  -I$(top_srcdir)/src/net2 \
  -I$(top_srcdir)/src/os \
- -I$(top_srcdir)/src/parser @all_includes@
+ -I$(top_srcdir)/src/parser @xml_includes@ @all_includes@
 
 noinst_PROGRAMS=gwentest
 gwentest_SOURCES=gwentest.c
-gwentest_LDADD=$(top_builddir)/src/libgwenhywfar.la
+gwentest_LDADD=$(top_builddir)/src/libgwenhywfar.la @xml_libraries@
 
 EXTRA_DIST = README.MSVC gwentest.vcproj
 
