@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?/>
+<?xml version="1.0" encoding="utf-8"?>
 <profile>
 <currentTargetNameSpace/>
 <derivedTypesImported>1</derivedTypesImported>
